crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_problems_160x48.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                                                                                                               
 1 Local                                                                                                                                                        
┌ Message log · Tab 1 ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                                                                              │
│                                                                                                                                                              │
│       ┌ 3 configuration problems ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐       │
│       │ keybindings.FileList."ctrl-foo": invalid key: unknown key name "foo"                                                                         │       │
│       │ keybindings.Queue."x": unknown action "Remove" (see docs/keybindings.md)                                                                     │       │
│       │ styles: unknown style key `bogus`                                                                                                            │       │
└───────│                                                                                                                                              │───────┘
┏▶Local │                                                                                                                                              │───────┐
┃(not av│                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┃       │                                                                                                                                              │       │
┗━━━━━━━│                                                                                                                                              │───────┘
┌ Queue │                                                                                                                                              │───────┐
│(not av│                                                                                                                                              │       │
│       │                                                                                                                                              │       │
│       │                                                                  [ Close ]                                                               1/3 │       │
│       └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘       │
│                                                                                                                                                              │
│                                                                                                                                                              │
│                                                                                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                                                                                                       F1 help  F10 quit
