crates/courier-ftp/src/components/dialog/snapshots/courier_ftp__components__dialog__snapshot_tests__snap_problems_80x24.snap
---
source: crates/courier-ftp/src/components/dialog/snapshot_tests.rs
expression: "hs.render(w, h)"
---
 Quickconnect (not available yet)                                               
 1 Local                                                                        
┌ Me┌ 3 configuration problems ────────────────────────────────────────────┐───┐
│(no│ keybindings.FileList."ctrl-foo": invalid key: unknown key name "foo" │   │
│   │ keybindings.Queue."x": unknown action "Remove" (see docs/keybindings │   │
└───│ styles: unknown style key `bogus`                                    │───┘
┏▶Lo│                                                                      │───┐
┃(no│                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┃   │                                                                      │   │
┗━━━│                                                                      │───┘
┌ Qu│                              [ Close ]                           1/3 │───┐
│(no└──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 DIALOG                                                       F1 help  F10 quit
